# Projects

./: .gitignore  README.md
C++/halcyon/base/: ReadMe.md
C++/halcyon/base/include/base/any/: any.h
C++/halcyon/base/include/base/base64/: base64.h
C++/halcyon/base/include/base/common/: base_define.h  noncopyable.h  platform.h
C++/halcyon/base/include/base/function/: defer.h  function.h  function_template.h  weak_callback.h
C++/halcyon/base/include/base/md5/: md5.h
C++/halcyon/base/include/base/message/: message_bus.h
C++/halcyon/base/include/base/optional/: optional.h
C++/halcyon/base/include/base/queue/: spsc_queue.h
C++/halcyon/base/include/base/range/: range.h
C++/halcyon/base/include/base/string/: string_view.h
C++/halcyon/base/include/base/task/: task.h
C++/halcyon/base/include/base/thread/: blocking_queue.h  count_down_latch.h  thread.h  thread_pool.h  thread_task.h
C++/halcyon/base/include/base/time/: elapsed_timer.h  timestamp.h
C++/halcyon/base/include/base/utility/: bind.h  coding.h  function_traits.h  lazy.h  type.h  types.h  utility.h
C++/halcyon/base/include/base/variant/: variant.h
C++/halcyon/base/project/: CMakeLists.txt
C++/halcyon/base/project/vs2022/: base.vcxproj  base.vcxproj.filters  ut.vcxproj  ut.vcxproj.filters
C++/halcyon/base/src/: version.cpp
C++/halcyon/base/src/base64/: base64.cpp
C++/halcyon/base/src/md5/: md5.cpp
C++/halcyon/base/src/thread/: thread_pool.cpp
C++/halcyon/base/test/: CMakeLists.txt  ut_any.cpp  ut_base64.cpp  ut_bind.cpp  ut_count_down_latch.cpp  ut_defer.cpp  ut_function.cpp  ut_function_traits.cpp  ut_lazy.cpp  ut_md5.cpp  ut_message_bus.cpp  ut_optional.cpp  ut_singleton.cpp  ut_string_view.cpp  ut_thread.cpp  ut_threadpool.cpp  ut_timestamp.cpp  ut_type.cpp  ut_types.cpp  ut_utility.cpp  ut_variant.cpp  ut_weak_callback.cpp
C++/halcyon/depends/halcyon/base/1.0.0/include/base/: version.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/any/: any.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/common/: base_define.h  platform.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/function/: function_template.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/md5/: md5.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/thread/: blocking_queue.h
C++/halcyon/depends/halcyon/base/1.0.0/include/base/utility/: types.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/: version.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/any/: any.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/base64/: base64.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/function/: function.h  function_template.h  weak_callback.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/optional/: optional.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/range/: range.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/singleton/: singleton.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/time/: elapsed_timer.h  timestamp.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/utility/: type.h  utility.h
C++/halcyon/depends/halcyon/base/1.0.2/include/base/variant/: variant.h
C++/halcyon/depends/halcyon/base/1.0.2/lib/win64_v143_Debug/: based.lib
C++/halcyon/depends/halcyon/base/1.0.2/lib/win64_v143_Release/: base.lib
C++/halcyon/depends/halcyon/base/1.0.3/base/common/: base_define.h
C++/halcyon/depends/halcyon/base/1.0.3/base/message/: message_bus.h
C++/halcyon/depends/halcyon/base/1.0.3/base/time/: timestamp.h
C++/halcyon/depends/halcyon/base/1.0.3/base/utility/: utility.h
C++/halcyon/depends/halcyon/base/1.0.3/lib/win64_v143_Debug/: based.lib
C++/halcyon/depends/halcyon/base/1.0.3/lib/win64_v143_Release/: base.lib
C++/halcyon/log/include/log/: log_define.h
C++/halcyon/log/src/: file_opt.cpp  file_opt.h
C++/halcyon/log/test/: CMakeLists.txt  ut_file_opt.cpp
Python/log/: log.py
Python/net/: tcp.py  tcp_file_client.py  tcp_file_server.py  udp.py
Python/net/tcp_file/: tcp_file_client.py
Python/thread/: process.py  process_pool.py  thread.py  thread_pool.py
Python/thread_process/: process.py  process_pool.py  thread.py  thread_pool.py
